Crash when trying to "Add Custom Split Normals Data" after Averaging Face Area #80159

Closed
opened 2020-08-27 12:21:00 +02:00 by Aurel P. · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca
Broken: version: 2.83.4, branch: master, commit date: 2020-08-05 06:00, hash: c113af8288
Broken: version: 2.83.5, branch: master, commit date: 2020-08-19 06:07, hash: c2b144df39
Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-25 16:00, hash: 21cb6f09ff
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-25 19:28, hash: 396d39c6b9
Worked: N/A

Short description of error
Crash when trying to "Add Custom Split Normals Data" after Normals > Average > Custom Normal / Face Area / Corner Angle

Exact steps for others to reproduce the error

  1. File > Defaults > Load Factory Settings > Load Factory Settings
  2. Add any mesh ( Shift+A > M > M )
  3. Enter Edit Mode (Tab)
  4. Alt+N > Reset Vectors
  5. Go to Object Data Properties > Clear Custom Split Normals Data
  6. Alt+N > Average > Custom Normal / Face Area / Corner Angle
  7. Go to Object Data Properties > Add Custom Split Normals Data
  8. Crash

Same behavior on home and 2 office PCs ( different configs )

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: `375c7dc4ca` Broken: version: 2.83.4, branch: master, commit date: 2020-08-05 06:00, hash: `c113af8288` Broken: version: 2.83.5, branch: master, commit date: 2020-08-19 06:07, hash: `c2b144df39` Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-25 16:00, hash: `21cb6f09ff` Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-25 19:28, hash: `396d39c6b9` Worked: N/A **Short description of error** Crash when trying to "Add Custom Split Normals Data" after Normals > Average > Custom Normal / Face Area / Corner Angle **Exact steps for others to reproduce the error** 1. File > Defaults > Load Factory Settings > Load Factory Settings 2. Add any mesh ( Shift+A > M > M ) 3. Enter Edit Mode (Tab) 4. Alt+N > Reset Vectors 5. Go to Object Data Properties > Clear Custom Split Normals Data 6. Alt+N > Average > Custom Normal / Face Area / Corner Angle 7. Go to Object Data Properties > Add Custom Split Normals Data 8. Crash Same behavior on home and 2 office PCs ( different configs )

Added subscriber: @peticel

Added subscriber: @peticel

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Exception thrown at 0x00007FF741DF1EB0 in blender.exe: 0xC0000005: Access violation reading location 0xFFFFFFFFFFFFFFFF.

>	blender.exe!BLI_mempool_free(BLI_mempool * pool, void * addr) Line 424	C

 	blender.exe!CustomData_bmesh_free_block(CustomData * data, void * * block) Line 3728	C
 	blender.exe!update_data_blocks(BMesh * bm, CustomData * olddata, CustomData * data) Line 860	C
 	blender.exe!BM_data_layer_add(BMesh * bm, CustomData * data, int type) Line 903	C
 	blender.exe!mesh_customdata_custom_splitnormals_add_exec(bContext * C, wmOperator * UNUSED_op) Line 955	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1312	C
 	blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Line 1516	C
 	blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Line 1562	C
 	blender.exe!ui_apply_but_funcs_after(bContext * C) Line 925	C
 	blender.exe!ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Line 10732	C
 	[Inline Frame] blender.exe!wm_handler_ui_call(bContext *) Line 638	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2754	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2868	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3292	C
 	blender.exe!WM_main(bContext * C) Line 479	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 548	C
 	[External Code]	
`Exception thrown at 0x00007FF741DF1EB0 in blender.exe: 0xC0000005: Access violation reading location 0xFFFFFFFFFFFFFFFF.` ``` > blender.exe!BLI_mempool_free(BLI_mempool * pool, void * addr) Line 424 C blender.exe!CustomData_bmesh_free_block(CustomData * data, void * * block) Line 3728 C blender.exe!update_data_blocks(BMesh * bm, CustomData * olddata, CustomData * data) Line 860 C blender.exe!BM_data_layer_add(BMesh * bm, CustomData * data, int type) Line 903 C blender.exe!mesh_customdata_custom_splitnormals_add_exec(bContext * C, wmOperator * UNUSED_op) Line 955 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1312 C blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Line 1516 C blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Line 1562 C blender.exe!ui_apply_but_funcs_after(bContext * C) Line 925 C blender.exe!ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Line 10732 C [Inline Frame] blender.exe!wm_handler_ui_call(bContext *) Line 638 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2754 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2868 C blender.exe!wm_event_do_handlers(bContext * C) Line 3292 C blender.exe!WM_main(bContext * C) Line 479 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 548 C [External Code] ```

This issue was referenced by a9cacb2280

This issue was referenced by a9cacb228041e33bc04a3bc634532164b102c4df

This issue was referenced by 2a0e996d77

This issue was referenced by 2a0e996d772b780b67c3b3d72586f9ddae754f34

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Philipp Oeser self-assigned this 2020-08-27 22:14:09 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80159
There is no content yet.